# rag-demo

./: .gitignore  README.md  pyproject.toml
examples/docs/: knowledge.jsonl  rag_intro.md  vector_search.txt
raglite/: __init__.py  __main__.py  chunking.py  cli.py  documents.py  embeddings.py  store.py
tests/: test_chunking.py  test_documents.py  test_store.py
