[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raglite-demo"
version = "0.1.0"
description = "A lightweight RAG vector retrieval CLI demo."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastembed>=0.8,<0.9",
    "httpx[socks]>=0.28,<1",
    "numpy>=1.26",
    "rich>=13",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
raglite = "raglite.cli:app"

[tool.setuptools.packages.find]
include = ["raglite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
